# AI-client-project

./: .gitignore  Cargo.toml  astro.config.mjs  package-lock.json  package.json
ai_plugin_helper/src/: lib.rs
rasast_plugin/: Cargo.toml
rasast_plugin/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_req.rs  commands.rs  main.rs  plugin_sys.rs  serde_obj.rs  tokenizer.rs  utility.rs
src-tauri/src/cdn/: config.json
src/components/: ai_ball.astro  chat_mess.js  resize_input.astro  send_btn.astro
src/layouts/: main_page.astro
src/pages/: index.astro  setting.astro
test_workdir/: config.json
