[package]
name = "rasast"
version = "0.1.0"
description = "A Tauri App"
authors = ["The DT (https://thedt.is-a.dev)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "global-shortcut-all",
    "shell-open",
    "window-all",
    "system-tray"
] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1"}
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
markdown = { git = "https://github.com/wooorm/markdown-rs" }
tauri-plugin-deep-link = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sapi-lite = "0.1.1"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
eventsource-stream = "0.2.3"
futures-core = "0.3.30"
bytes = "1.7.1"
futures-util = "0.3.30"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
dlopen2 = "0.7.0"
rasast_plugin = { path = "../rasast_plugin" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
